# Graphics-Test-1

./: .gitattributes  .gitignore  ArrayBuffer.cpp  ArrayBuffer.h  ArrayObject.cpp  ArrayObject.h  CMakeLists.txt  Graphics Test 1.sln  Graphics Test 1.vcxproj  Graphics Test 1.vcxproj.filters  LICENSE  Main.cpp  README.md  VertexBuffer.cpp  VertexBuffer.h  default.frag  default.vert  glad.c  run.sh  shader.cpp  shader.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
graphicsTest1.xcodeproj/: project.pbxproj
graphicsTest1.xcodeproj/project.xcworkspace/xcuserdata/sid.xcuserdatad/: UserInterfaceState.xcuserstate
graphicsTest1.xcodeproj/xcshareddata/xcschemes/: Graphics Test 1.xcscheme
lib/shaders/: lightFragment.glsl  lightVertex.glsl  modelFragment.glsl  modelVertex.glsl
src/: arrayBuffer.cpp  arrayObject.cpp  camera.cpp  main.cpp  mesh.cpp  shader.cpp  stb.cpp  texture.cpp  vertexBuffer.cpp
src/include/: arrayBuffer.h  arrayObject.h  camera.h  mesh.h  shader.h  texture.h  vertexBuffer.h
